--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/main.js",
   "scripts": {
     "start": "node dist/main.js",
-    "dev": "ts-node --transpile-only src/main.ts -- local",
+    "dev": "NODE_ENV=development ts-node --transpile-only src/main.ts -- local",
     "build": "rm -rf dist/ && tsc",
     "test": "run-s -l test:*",
     "test:ts": "tsc --noEmit",
@@ -23,6 +23,7 @@
     "envalid": "^6.0.2",
     "masto": "^3.6.4",
     "source-map-support": "^0.5.19",
+    "twitter-api-client": "^1.3.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
