--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,12 @@
     "outDir": "dist",
     "allowJs": true,
     "strict": true,
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "sourceMap": true,
-    "rootDir": "./src",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "rootDir": "./src"
   },
   "include": [
     "src"
