--- a/package.json
+++ b/package.json
@@ -1,43 +1,38 @@
 {
-  "name": "limesguy",
+  "name": "italian-gramsci",
   "version": "0.0.1",
-  "description": "why cant i, hold all these",
+  "description": "it's-a me, italian gramsci! i tweet-a da thoughts i have while inna da prison.",
   "private": true,
   "main": "dist/main.js",
   "scripts": {
-    "start": "node dist/main.js",
-    "dev": "NODE_ENV=development ts-node --transpile-only src/main.ts -- local",
+    "start": "NODE_ENV=production node --enable-source-maps dist/main.js",
+    "dev": "NODE_ENV=development ts-node -T src/main.ts -- local",
     "build": "rm -rf dist/ && tsc",
-    "test": "run-s -l test:*",
+    "test": "run-p -cl test:*",
     "test:ts": "tsc --noEmit",
     "test:eslint": "eslint --color 'src/**/*'",
-    "test:prettier": "prettier 'src/**/*' -l",
+    "test:prettier": "prettier 'src/**' -l",
     "prettier": "prettier 'src/**/*' --write"
   },
   "author": "s <https://github.com/lostfictions>",
   "license": "AGPL-3.0",
   "dependencies": {
-    "@sentry/integrations": "^5.29.0",
-    "@sentry/node": "^5.29.0",
-    "async-retry": "^1.3.1",
-    "envalid": "^6.0.2",
-    "masto": "^3.6.4",
-    "source-map-support": "^0.5.19",
-    "twitter-api-client": "^1.3.7",
-    "uuid": "^8.3.2"
+    "@sentry/integrations": "^7.114.0",
+    "@sentry/node": "^8.40.0",
+    "dotenv": "^16.4.5",
+    "twoot": "0.4.0",
+    "znv": "^0.4.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/async-retry": "^1.4.2",
-    "@types/node": "^14.14.11",
-    "@types/uuid": "^8.3.0",
-    "eslint": "^7.15.0",
-    "eslint-config-lostfictions": "^0.5.0",
+    "@types/node": "^20.17.7",
+    "eslint": "^8.57.1",
+    "eslint-config-lostfictions": "^6.1.0",
+    "fast-check": "^3.23.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.2"
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   },
-  "engines": {
-    "node": ">=14"
-  }
+  "packageManager": "pnpm@9.7.1+sha512.faf344af2d6ca65c4c5c8c2224ea77a81a5e8859cbc4e06b1511ddce2f0151512431dd19e6aff31f2c6a8f5f2aced9bd2273e1fed7dd4de1868984059d2c4247"
 }
